# carmine-api

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.fetcher  README.md  docker-compose.yaml  publish.sh
carmine-api/: Cargo.toml
carmine-api-airdrop/: Cargo.toml  README.md
carmine-api-airdrop/src/: air-drop.json  lib.rs  merkle_tree.rs
carmine-api-cache/: Cargo.toml
carmine-api-cache/src/: apy.rs  defispring.rs  insurance_events.rs  lib.rs  live_options_tracker.rs  pail_events.rs  trade_data.rs
carmine-api-core/: Cargo.toml
carmine-api-core/migrations/2023-04-11-140215_create_events/: up.sql
carmine-api-core/migrations/2023-04-11-140525_create_options/: up.sql
carmine-api-core/migrations/2023-05-03-071925_new-db-structure/: down.sql  up.sql
carmine-api-core/migrations/2023-05-17-081902_option_position/: down.sql  up.sql
carmine-api-core/migrations/2023-06-06-133823_create_oracle_prices/: down.sql  up.sql
carmine-api-core/migrations/2023-06-17-184436_create_starkscan_events/: down.sql  up.sql
carmine-api-core/migrations/2024-02-27-220622_create_insurance_events/: down.sql  up.sql
carmine-api-core/migrations/2024-04-08-135023_add_vote_points/: down.sql  up.sql
carmine-api-core/migrations/2024-05-24-154512_add_lp_token_value_usd/: down.sql  up.sql
carmine-api-core/migrations/2024-06-15-074135_create_braavos_bonus/: down.sql  up.sql
carmine-api-core/migrations/2024-08-01-172122_create_referral_codes/: down.sql  up.sql
carmine-api-core/migrations/2024-29-02-225112_create_points/: down.sql  up.sql
carmine-api-core/migrations/2025-03-10-101400_alter_referral_event_add_source/: down.sql  up.sql
carmine-api-core/src/: constants.rs  lib.rs  network.rs  pool.rs  schema.rs  telegram_bot.rs  types.rs  utils.rs
carmine-api-db/: Cargo.toml
carmine-api-db/migrations/2023-03-17-095048_events/: up.sql
carmine-api-db/migrations/2023-03-18-102016_options/: up.sql
carmine-api-db/migrations/2023-03-19-182742_options/: up.sql
carmine-api-db/migrations/2023-03-19-182825_events/: up.sql
carmine-api-db/src/: lib.rs  lp_value.rs  models.rs  schema.rs
carmine-api-fetcher/: Cargo.toml
carmine-api-fetcher/src/: braavos.rs  lib.rs  main.rs
carmine-api-prices/: Cargo.toml
carmine-api-prices/src/: lib.rs
carmine-api-referral/: Cargo.toml
carmine-api-referral/src/: building_blocks.rs  lib.rs  referral_code.rs
carmine-api-rpc-gateway/: Cargo.toml
carmine-api-rpc-gateway/src/: lib.rs
carmine-api-starknet/: Cargo.toml
carmine-api-starknet/src/: amm_state.rs  carmine.rs  example_state.json  lib.rs  oracle.rs  starkscan.rs  temp.py
carmine-api/src/: handlers.rs  main.rs  response.rs  types.rs
carmine-api/src/handlers/: common.rs  v0.rs  v1.rs  v2.rs
docker/: Dockerfile.api
