[package]
name = "carmine-api-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carmine-api-core = { path = "../carmine-api-core" }
carmine-api-db = { path = "../carmine-api-db" }
carmine-api-starknet = { path = "../carmine-api-starknet" }
serde = { version = "1.0.156", features = ["derive"] }
