[package]
name = "carmine-api-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carmine-api-core = { path = "../carmine-api-core" }
carmine-api-db = { path = "../carmine-api-db" }
carmine-api-prices = { path = "../carmine-api-prices" }
carmine-api-starknet = { path = "../carmine-api-starknet" }
dotenvy = "0.15.6"
reqwest = "0.12.4"
serde = { version = "1.0.156", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros"] }

[[bin]]
path = "./src/bin/state.rs"
name = "state"

[[bin]]
path = "./src/bin/defispring.rs"
name = "defispring"

[[bin]]
path = "./src/bin/insurance.rs"
name = "insurance"
