[package]
name = "carmine-api-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carmine-api-core = { path = "../carmine-api-core" }
carmine-api-referral = { path = "../carmine-api-referral" }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15.6"
serde = { version = "1.0.156", features = ["derive"] }

[[bin]]
path = "./src/bin/query.rs"
name = "query"
