[package]
name = "carmine-api-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
carmine-api-core = { path = "../carmine-api-core" }
carmine-api-starknet = { path = "../carmine-api-starknet" }
carmine-api-rpc-gateway = { path = "../carmine-api-rpc-gateway" }
tokio = "1.26.0"
