[package]
name = "carmine-api-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
carmine-api-core = { path = "../carmine-api-core" }
carmine-api-db = { path = "../carmine-api-db" }
carmine-api-starknet = { path = "../carmine-api-starknet" }
carmine-api-rpc-gateway = { path = "../carmine-api-rpc-gateway" }
dotenvy = "0.15.6"
tokio = "1.26.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokyo = "1.0.0"

[[bin]]
path = "./src/bin/amm_state.rs"
name = "amm_state"


[[bin]]
path = "./src/bin/braavos_proscore.rs"
name = "braavos_proscore"
