[package]
name = "carmine-api-rpc-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carmine-api-core = { path = "../carmine-api-core" }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.96"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
path = "./src/bin/test.rs"
name = "test"
