[package]
name = "carmine-api-starknet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carmine-api-core = { path = "../carmine-api-core" }
carmine-api-db = { path = "../carmine-api-db" }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15.6"
futures = "0.3.27"
reqwest = "0.11.14"
serde = { version = "1.0.156", features = ["derive"] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
path = "./bin/non-expired.rs"
name = "non-expired"

[[bin]]
path = "./bin/populate-db.rs"
name = "populate-db"

[[bin]]
path = "./bin/local-to-gcp.rs"
name = "local-to-gcp"
