[package]
name = "carmine-api-starknet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
carmine-api-core = { path = "../carmine-api-core" }
carmine-api-db = { path = "../carmine-api-db" }
carmine-api-rpc-gateway = { path = "../carmine-api-rpc-gateway" }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15.6"
futures = "0.3.27"
reqwest = "0.12.4"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.96"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"


[[bin]]
path = "./src/bin/non-expired.rs"
name = "non-expired"

[[bin]]
path = "./src/bin/populate-db.rs"
name = "populate-db"

[[bin]]
path = "./src/bin/call.rs"
name = "call"

[[bin]]
path = "./src/bin/apy.rs"
name = "apy"

[[bin]]
path = "./src/bin/get_state.rs"
name = "get_state"

[[bin]]
path = "./src/bin/run_oracle.rs"
name = "oracle"

[[bin]]
path = "./src/bin/add_prices.rs"
name = "prices"

[[bin]]
path = "./src/bin/update_state.rs"
name = "state"

[[bin]]
path = "./src/bin/update_events.rs"
name = "events"

[[bin]]
path = "./src/bin/fetch.rs"
name = "fetch"

[[bin]]
path = "./src/bin/volatility.rs"
name = "volatility"

[[bin]]
path = "./src/bin/telegram.rs"
name = "telegram"

[[bin]]
path = "./src/bin/pragma.rs"
name = "pragma"
