[package]
name = "carmine-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
carmine-api-starknet = { path = "../carmine-api-starknet" }
carmine-api-cache = { path = "../carmine-api-cache" }
carmine-api-core = { path = "../carmine-api-core" }
carmine-api-db = { path = "../carmine-api-db" }
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
serde = { version = "1.0.156", features = ["derive"] }
tokio = "1.26.0"

[[bin]]
path = "./bin/non-expired.rs"
name = "non-expired"

[[bin]]
path = "./bin/populate-db.rs"
name = "populate-db"

[[bin]]
path = "./bin/local-to-gcp.rs"
name = "local-to-gcp"
