[package]
name = "carmine-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.1"
carmine-api-airdrop = { path = "../carmine-api-airdrop" }
carmine-api-cache = { path = "../carmine-api-cache" }
carmine-api-core = { path = "../carmine-api-core" }
carmine-api-db = { path = "../carmine-api-db" }
carmine-api-starknet = { path = "../carmine-api-starknet" }
carmine-api-rpc-gateway = { path = "../carmine-api-rpc-gateway" }
dotenvy = "0.15.6"
env_logger = "0.11.3"
lazy_static = "1.4.0"
serde = { version = "1.0.156", features = ["derive"] }
teloxide = "0.12.2"
tokio = "1.26.0"
reqwest = "0.12.4"
serde_json = "1.0.111"
